[package]
name = "fluxlock-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
base64 = "0.22"
once_cell = "1.19"

pqcrypto-dilithium = "0.5"
pqcrypto-traits = "0.3"

# 🔥 REQUIRED FOR ENGINE
rand = "0.8"